# files

plugins/pantheon-files-cloud/: meson.build
